force-app/main/default/objects/newFilm__c/newFilm__c.object-meta.xml
<CustomObject>
    <label>newFilm</label>
    <nameField>
        <label>newFilm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>newFilms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>