force-app/main/default/objects/newFilm__c/fields/budget__c.field-meta.xml
<CustomField>
    <fullName>budget__c</fullName>
    <label>budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>