force-app/main/default/objects/newFilm__c/fields/genres__c.field-meta.xml
<CustomField>
    <fullName>genres__c</fullName>
    <label>genres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>