force-app/main/default/objects/newFilm__c/fields/original_title__c.field-meta.xml
<CustomField>
    <fullName>original_title__c</fullName>
    <label>original_title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>