force-app/main/default/objects/newFilm__c/fields/overview__c.field-meta.xml
<CustomField>
    <fullName>overview__c</fullName>
    <label>overview</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>