force-app/main/default/objects/newFilm__c/fields/poster_path__c.field-meta.xml
<CustomField>
    <fullName>poster_path__c</fullName>
    <label>poster_path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>