force-app/main/default/objects/newFilm__c/fields/release_date__c.field-meta.xml
<CustomField>
    <fullName>release_date__c</fullName>
    <label>release_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>