force-app/main/default/objects/newFilm__c/fields/vote_average__c.field-meta.xml
<CustomField>
    <fullName>vote_average__c</fullName>
    <label>vote_average</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>