force-app/main/default/objects/newFilm__c/fields/vote_count__c.field-meta.xml
<CustomField>
    <fullName>vote_count__c</fullName>
    <label>vote_count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>